# devicectl

./: .gitignore  Dockerfile  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
Ctl/: VERSION  config.yaml
Ctl/dev/: docker-compose.yml  example.env  run.sh
Ctl/docker/: django-uwsgi.ini  entrypoint.sh  manage.sh
docs/: nautobot.md  quickstart.md  settings.md
fixtures/: nautobot.actions.json
src/: manage.py
src/devicectl/: __init__.py  celery.py  urls.py  wsgi.py
src/devicectl/settings/: __init__.py  dev.py  run_tests.py
src/django_devicectl/: admin.py  api_schema.py  apps.py  auth.py  decorators.py  enum.py  forms.py  middleware.py  nautobot.py  netbox.py  peeringdb.py  referee.py  signals.py  traffic.py  urls.py  util.py  validators.py  views.py
src/django_devicectl/inet/: util.py
src/django_devicectl/management/commands/: devicectl_nautobot_pull.py  devicectl_nautobot_sync.py  devicectl_netbox_sync.py
src/django_devicectl/migrations/: 0001_initial.py  0002_virtualport_name.py  0003_device_ref.py  0004_device_ref_2.py  0005_facility.py  0006_device_facility.py  0007_rel_backref.py  0008_facility_fields.py  0009_reference_is_sot.py  0010_auto_20220804_1039.py  0011_auto_20220909_0913.py  0012_auto_20220914_1559.py  0012_auto_20220919_1441.py  0013_alter_port_port_info.py  0014_alter_port_virtual_port.py  0015_apidocs.py  0016_auto_20220928_0925.py  0017_auto_20220928_1051.py  0018_dummy_port_prefix.py  0019_deviceoperationalstatus_requestpeerctlsync.py  0020_alter_deviceoperationalstatus_event.py  0021_alter_deviceoperationalstatus_error_message.py  0022_create_missing_ports.py  0023_device_dconfig.py  0024_device_config_2.py  0025_port_meta.py  0026_auto_20230711_1224.py  0027_auto_20230713_0848.py  0028_auto_20230824_1138.py  0029_devicerefereereport.py  0030_auditctlixtrafficprocessed_auditctlixtrafficreceived.py
src/django_devicectl/models/: __init__.py  common.py  devicectl.py  task_interface.py  tasks.py
src/django_devicectl/rest/: authentication.py  core.py  decorators.py
src/django_devicectl/templates/: theme-select.html
src/tests/: test_init.py
(+80 files in other folders)
